manifests/media/jellyseer/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - image: seerr/seerr:v3.5.0
        name: jellyseerr
        volumeMounts:
        - name: storage
          mountPath: /app/config
          subPath: jellyseerr/config
        ports:
        - containerPort: 5055
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 128Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: media-nfs
