manifests/media/jellyseer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5055
  type: ClusterIP
