manifests/media/jellyseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.scheme: http
spec:
  tls:
    - hosts:
        - jellyseerr.tanksrop.xyz
      secretName: tanksrop.xyz
  rules:
  - host: jellyseerr.tanksrop.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr
            port:
              number: 80
